Client/css/style.css
body {
	background-color : #ECECEC;
	min-height : 100%;
}

.container {
	width : 60%;
}

.login-body {
	background-color : #79d8a1;

}


header {
	display : block;
	background : #FFF;
	box-shadow : 0px 0px 10px #888888;
}

.logs {
	padding-left : 0;
	padding-right : 0;
}

.logs img {
	width : 30%;
	height : 30%;
	margin-top : 5%;
	margin-right : 5%;
	display : inline-block;
}

.logo {
	padding-left : 0;
}

.logo img {
	width : 100%;
	height : 100%;
}

nav {
	margin : 2% 0 0 0;
	padding-left : 0;
}

.Message {
	border-bottom : solid 1px #c9c9c9;
	border-left : solid 1px #c9c9c9;
	border-right : solid 1px #c9c9c9;
	min-height : 150px;
	background-color : #FFF;
}


.write-message {
	display : block;
	border-radius : 4px 4px 0 0;
	background : #bdc3c7;
	border: solid 1px 1px 0 1px #95a5a6;
}

.write-message img {
	display : inline-block;
	width : 4%;
	margin : 1% 0.5% 1% 1%;
}

.write-message form {
	display : inline-block;
	width : 100% !important;
	height : 100%;
}

.write-message-content {
	display : inline-block;
	width : 94%;
}

.write-message-content input {
	display : inline;
	width : 92%;
	margin : auto;
}

.write-message-content button {
	margin-left : 1%;
}

.messages {
}

.MsgMain {
}

.MsgAvatar {
	margin : 10px;
	width : 50px;
	height : 50px;
	float : left;
}

.MsgContent {
	margin-left : 70px;
	margin-right : 10px;
}

.MsgContent a:hover {
	text-decoration : underline;
}

.MsgAuthor {
	font-weight : bold;
	font-size : 23px;
}

.MsgLogin {
	color : #a8a8a8;
}

.MsgDate {
 	color : #a8a8a8;
}

.message-container {
	padding : 0;
	display : block;
	margin-bottom : 15px;
}

aside {
	margin-top : 15px;
	margin-left : 5.5%;	
	width : 13%;
	border : 1px solid #27ae60 !important;
	float : left;
}

.aside-heading {
	background-color : #27ae60;
	color : #FFF;
}

.aside-body {
	border-top : 1px solid #27ae60 !important;
}

aside img {
	width : 100%;
	height : 100%;
}

aside h5 {
	margin-bottom : 0;
}

.stat {
	display : inline-block;
	margin-left : 3px;
}

.stat-name {
	font-size : 14px;
}

.stat-value {
	font-weight : bold;
}

#login-container {
	margin-top : 15px;
}

.youtube {
	width : 85%;
	height : 400px;
}

.spotify {
	display : block;
	width : 100%;
	margin : auto;
}


.image-media {	
	border-radius : 4px;
	display : block;
	cursor : pointer;
}


.video {
	margin : auto;
	border-radius : 4px;
}

.audio {
	margin : auto;
	width : 100%;
}

.media-container {
	width : 80%;
	
	margin-left : auto;
	margin-right : auto;
	margin-bottom : 15px;
	
}





.container-main {
	margin-top : 15px;
}

.main-footer {
	display : block;
	border-radius : 0px 0px 4px 4px;
	background : #bdc3c7;
	border: solid 0 1px 1px 1px #95a5a6;
}


footer {
	padding : 5px 0 5px 0;
	text-align : center;
	background : #FFF;
}

.max-width {
	width : 250px;
}

.max-height {
	height : 250px;
}

